--- a/grader/templates/score.html
+++ b/grader/templates/score.html
@@ -61,7 +61,7 @@
         <div class="row">
 
             <div class="col-xs-6">
-                全局进度 {{ (sys_process[0] - sys_process[1]) * 100 / sys_process[0] }}%
+                全局进度 {{ (sys_process[0] - sys_process[1]) * 100 / (1+sys_process[0]) }}%
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: {{ (sys_process[0] - sys_process[1]) * 100 / sys_process[0] }}%;">
 
@@ -69,9 +69,9 @@
                 </div>
             </div>
             <div class="col-xs-6">
-                你的进度 {{ (user_process[0] - user_process[1]) * 100 / user_process[0] }}%
+                你的进度 {{ (user_process[0] - user_process[1]) * 100 / (1 + user_process[0]) }}%
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: {{ (user_process[0] - user_process[1]) * 100 / user_process[0] }}%;">
+                    <div class="progress-bar" role="progressbar" style="width: {{ (user_process[0] - user_process[1]) * 100 / (1+user_process[0]) }}%;">
 
                     </div>
                 </div>
